replaced banner SVG by PNG (SVG problematic in IE8)

--- a/_drafts/2013-12-06-Amazon.md
+++ b/_drafts/2013-12-06-Amazon.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Test post rubbish
-tags: [English Amazon]
+tags: English Amazon
 ---
 
 [](http://www.theguardian.com/technology/2013/dec/01/week-amazon-insider-feature-treatment-employees-work)
