added hr, redid 404 page

--- a/404.md
+++ b/404.md
@@ -1,20 +1,20 @@
 ---
-layout: default
-title: 404 - Page not found
+layout: page
+title: WHEEL OUT THE DIGITAL DARK AGE KLAXON!!11!!
+header: WHEEL OUT THE DIGITAL DARK AGE KLAXON!!11!!
 permalink: /404.html
 ---
 
-<div class="text-center">
-  <h1>WHEEL OUT THE DIGITAL DARK AGE KLAXON!!11!!</h1>
+# WHEEL OUT THE DIGITAL DARK AGE KLAXON!!11!!
 
-  <figure class="image">
-    <img src="{{ BASE_PATH }}/images/bgava-large-glitched.png" alt="Bitrot a go-go">
-  </figure>
+<br />
+<figure class="image">
+    <img src="{{ BASE_PATH }}/images/bgava-large-broken.png" alt="Avatar broken">
+</figure>
 
-  <p>This page does not exist (404 error)!</p>
-  <br/>
-</div>
+This page does not exist (404 error)!
 <hr>
+
 <script>
   // on 2016-02-01 GitHub Pages upgraded to Jekyll3, which broke all blog posts with trailing slashes
   // and there are tons of links out there on the web to posts with a trailing slash, so can't ignore it
@@ -23,5 +23,3 @@ permalink: /404.html
     window.location = url.substr(0, url.length - 1);
   }
 </script>
-
-
