--- a/404.md
+++ b/404.md
@@ -24,8 +24,10 @@ https://www.bitsgalore.org/2020
 BUT without the script links to pre-2016 style URLS with trailing slash will now give a 404. Examples: 
 
 https://www.bitsgalore.org/2014/08/02/How-to-save-a-web-page-to-the-Internet-Archive/
+https://www.bitsgalore.org/2014/11/13/Demise-Of-Dutch-Blogosphere/
 https://www.bitsgalore.org/2014/12/28/Perdiep-Ramesar-Internet-Archive/
 https://www.bitsgalore.org/2015/01/06/Dutch-newspaper-wipes-articles-Internet-Archive-rescue/
+
 -->
 
 <script>
@@ -34,6 +36,10 @@ https://www.bitsgalore.org/2015/01/06/Dutch-newspaper-wipes-articles-Internet-Ar
   var url = location.href;
 
   if(url.endsWith('How-to-save-a-web-page-to-the-Internet-Archive/') {
+    window.location = url.substr(0, url.length - 1);
+  }
+
+  if(url.endsWith('Demise-Of-Dutch-Blogosphere/') {
     window.location = url.substr(0, url.length - 1);
   }
 
