--- a/404.md
+++ b/404.md
@@ -36,7 +36,7 @@ https://www.bitsgalore.org/2015/01/06/Dutch-newspaper-wipes-articles-Internet-Ar
   var url = location.href;
 
   if(url.endsWith('How-to-save-a-web-page-to-the-Internet-Archive/') {
-    window.location = 'https://www.bitsgalore.org/2014/08/02/How-to-save-a-web-page-to-the-Internet-Archive';
+    window.location.replace('https://www.bitsgalore.org/2014/08/02/How-to-save-a-web-page-to-the-Internet-Archive');
   }
 
 </script>
