--- a/404.md
+++ b/404.md
@@ -35,8 +35,12 @@ https://www.bitsgalore.org/2015/01/06/Dutch-newspaper-wipes-articles-Internet-Ar
   // and there are tons of links out there on the web to posts with a trailing slash, so can't ignore it
   var url = location.href;
 
-  if(url.endsWith('How-to-save-a-web-page-to-the-Internet-Archive%2F') {
-    window.location.replace('https://www.bitsgalore.org/2014/08/02/How-to-save-a-web-page-to-the-Internet-Archive');
+  if(url.substr(url.length - 1) === '/') {
+    window.location = url.substr(0, url.length - 1);
   }
+
+  //if(url.endsWith('How-to-save-a-web-page-to-the-Internet-Archive%2F') {
+  //  window.location.replace('https://www.bitsgalore.org/2014/08/02/How-to-save-a-web-page-to-the-Internet-Archive');
+  //}
 
 </script>
