redirection - combined all URL

--- a/404.md
+++ b/404.md
@@ -22,7 +22,7 @@ This page does not exist (404 error)!
   if(url.endsWith('How-to-save-a-web-page-to-the-Internet-Archive/') ||
      url.endsWith('Demise-Of-Dutch-Blogosphere/') ||
      url.endsWith('Perdiep-Ramesar-Internet-Archive/') ||
-     url.endsWith('Dutch-newspaper-wipes-articles-Internet-Archive-rescue/') {
+     url.endsWith('Dutch-newspaper-wipes-articles-Internet-Archive-rescue/')) {
     window.location = url.substr(0, url.length - 1);
   }
 </script>
