--- a/404.md
+++ b/404.md
@@ -3,6 +3,8 @@ layout: page
 title: WHEEL OUT THE DIGITAL DARK AGE KLAXON!!11!!
 header: WHEEL OUT THE DIGITAL DARK AGE KLAXON!!11!!
 permalink: /404.html
+sitemap:
+  exclude: 'yes'
 ---
 
 # WHEEL OUT THE DIGITAL DARK AGE KLAXON!!11!!
