added multitool section

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -10,12 +10,185 @@ comment_id: 76
   <figcaption>Production photo from "2001: A Space Odyssey". ©Stanley Kubrick Archives/TASCHEN.</figcaption>
 </figure>
 
-Problems with PDF files are a recurring theme in my daily work. Over the years, I've been using a variety of open-source software tools for solving such problems. These include tools for validation and error-checking, the extraction of (technical) features and metadata, text and image extraction, to name but a few. Many of these are tools that I only use occasionally, so I often find myself forgetting how to use them (if I even remember what tool to use at all!). So, I thought it would be useful to document my go-to PDF tools and commands for a variety of common tasks in one single place, similar to [my 2015 post on preserving optical media from the command-line]({{ BASE_PATH }}/2015/11/13/preserving-optical-media-from-the-command-line). This post is first attempt at this. For now it is largely based on a number of unpublished lists, cheat-sheets and working notes that I've compiled earlier. I expect this will be very much a "living" document, and that I will add more content over time.
+Problems with PDF files are a recurring theme in my daily work. Over the years, I've been using a variety of open-source software tools for solving such problems. These include tools for validation and error-checking, the extraction of (technical) features and metadata, text and image extraction, to name but a few. Many of these are tools that I only use occasionally, so I often find myself forgetting how to use them (if I even remember what tool to use at all!). So, I thought it would be useful to document my go-to PDF tools and commands for a variety of common tasks in one single place, similar to [my 2015 post on preserving optical media from the command-line]({{ BASE_PATH }}/2015/11/13/preserving-optical-media-from-the-command-line). This post is first attempt at this. For now it is largely based on a number of unpublished lists, cheat-sheets and working notes that I've compiled earlier. I expect this will be very much a "living" document, and that I will add more content over time. The selection of tasks and tools presented here is by no means exhaustive, as it is guided to a great degree by the PDF-related issues I encounter in my day to day work. Also, many of these tasks could be done using other tools (including ones that are not mentioned here), so there's probably a fair amount of selection bias here, and don't want to make any claims of presenting the "best" way to do any of these tasks here.
+
+All of the tools presented here are published as open-source, and most of them have a command-line interface. 
 
 
 <!-- more -->
 
-## Outline of this post
+## PDF multi-tools
+
+Before diving into any specific tasks, I'll start this post by listing a number of general-purpose PDF tools and toolkits. Each of these are capable of various tasks (including some that I won't explicitly address in this post), and they can be seen as "Swiss army-knives" of PDF processing. Whenever I need to get some PDF processing or analysis done and I'm not sure what tool to use, these are the tools are usually my starting point. In the majority of cases at least one of them turns out to have the functionality I'm looking for, so it's a good idea to check them out iof you're not familiar with them already:
+
+- [Xpdf](https://www.xpdfreader.com/) and [Poppler](https://poppler.freedesktop.org/) are both PDF viewers that include a collection of tools for processing and manipulating PDF files. Poppler is a fork of Xpdf, and the tools in both products are largely identical.
+- [Pdfcpu](https://github.com/pdfcpu/pdfcpu) is a PDF processing library (which includes a CLI tool) that is written in the *Go* language. It supports all PDF versions up to PDF 1.7 (ISO-32000).
+- [QPDF](http://qpdf.sourceforge.net/) is "a command-line program that does structural, content-preserving transformations on PDF files".
+- [MuPDF](https://www.mupdf.com/) is "a lightweight PDF, XPS, and E-book viewer". It includes the [mutool](https://www.mupdf.com/docs/index.html) utility, which can do a number of PDF processing tasks.
+- [Ghostscript](https://www.ghostscript.com/) is "an interpreter for the PostScript language and PDF files". It provides rendering to a variety of raster and vector formats.  
+
+The remaining sections of this post are dedicated to specific tasks. As you will see, many these can be addressed using the multi-tools listed in this section.  
+
+## Validation and integrity testing
+
+PDFs that are damaged, structurally flawed or otherwise not conformant to the PDF format specification can result in a multitude of problems. A number of tools provide error checking and integrity testing functionality. This can range from limited structure checks, to full (claimed) validation against the filespec.
+
+
+### QPDF 
+
+Invoking QPDF (see above) with its `--check` option performs checks on the overall file structure, the presence of encryption, linearization, and encoding of stream data. I often find it useful to use it in conjuction with the `--verbose` option, which results in a command-line like this:
+
+```bash
+qpdf --check --verbose whatever.pdf
+```
+
+It is not a full-fledged PDF validator, and the [documentation](http://qpdf.sourceforge.net/files/qpdf-manual.html) states that:
+
+> A file for which --check reports no errors may still have errors in stream data content but should otherwise be structurally sound 
+
+### Pdfcpu
+
+The Pdfcpu command-line tool has a [`validate` command](https://pdfcpu.io/core/validate) that checks a file's compliance against [PDF 32000-1:2008](https://www.adobe.com/content/dam/acom/en/devnet/pdf/pdfs/PDF32000_2008.pdf) (i.e. the ISO version of PDF 1.7). It provides both a "strict" and a "relexed" validation mode, where the "relaxed" mode (which is the default!) ignores some common violations of the PDF specification. The command-line is:
+
+```bash
+pdfcpu validate whatever.pdf
+```
+
+The "strict" mode can be activated with the `-m` option:
+
+```bash
+pdfcpu validate -m strict whatever.pdf
+```
+
+
+### JHOVE
+
+
+[JHOVE](http://jhove.openpreservation.org/)
+
+```bash
+jhove -m PDF-hul -i whatever.pdf
+```
+
+
+### [Poppler](https://poppler.freedesktop.org/)
+
+```bash
+pdfinfo whatever.pdf
+```
+
+Or (forces reading of all text):
+
+```bash
+pdftotext whatever.pdf
+```
+
+### [Ghostscript](https://www.ghostscript.com/)
+
+```bash
+gs -dNOPAUSE -dBATCH -sDEVICE=nullpage whatever.pdf
+```
+
+### [Apache PDFBox](https://pdfbox.apache.org/)
+
+Using PDFDebugger (activates GUI-type browser):
+
+```bash
+java -jar ~/pdfbox/pdfbox-app-2.0.21.jar PDFDebugger whatever.pdf
+```
+
+### [MuPDF](https://mupdf.com/)
+
+```bash
+mutool info whatever.pdf 
+```
+
+### [VeraPDF](https://verapdf.org/)
+
+```bash
+verapdf whatever.pdf
+```
+
+(Or use GUI).
+
+
+
+
+## Metadata extraction
+
+
+
+
+## Compare two PDFs
+
+### [ComparePDF](http://www.qtrac.eu/)
+
+Compare text (verbose output):
+
+```bash
+comparepdf ct -v=2 whatever.pdf wherever.pdf
+```
+
+Compare appearance (verbose output):
+
+```bash
+comparepdf ca -v=2 whatever.pdf wherever.pdf
+```
+
+
+## Validation/testing/info
+
+<https://gist.github.com/bitsgalore/9eac23e44d6d99b3caa6#pdf-infovalidationtesting-commands>
+
+## Compare PDFs
+
+<https://gist.github.com/bitsgalore/9eac23e44d6d99b3caa6#compare-two-pdfs>
+
+## Repair
+
+Ghostscript, Poppler:
+
+<https://superuser.com/questions/278562/how-can-i-fix-repair-a-corrupted-pdf-file>
+
+
+## Extract features
+
+<https://gist.github.com/bitsgalore/9eac23e44d6d99b3caa6#useful-verapdf-command-lines>
+
+Disable PDF/A validation, only extract features:
+
+```
+verapdf --off --extract whatever.pdf > whatever.xml
+```
+
+Recursively process directory tree:
+
+```
+verapdf --recurse --off --extract myDir > whatever.xml
+```
+
+## Extract internal PDF objects
+
+<https://gist.github.com/bitsgalore/0ae15a7c964b04671828891abfc41b37>
+
+## Extract text
+
+<https://pypi.org/project/pdfminer/>
+
+## Extract URLs
+
+## Check PDF document for broken links with pdfcpu
+
+<https://gist.github.com/bitsgalore/9eac23e44d6d99b3caa6#check-pdf-document-for-broken-links-with-pdfcpu>
+
+
+## Extract references and metadata from PDF documents, and download all referenced PDFs
+
+<https://www.metachris.com/pdfx/>
+
+## Convert PDF to sth else
+
+pdftocairo (Poppler)?
 
 
 ## Further resources
