--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -22,7 +22,7 @@ All of the tools presented here are published as open-source, and most of them h
 Before diving into any specific tasks, I'll start this post by listing a number of general-purpose PDF tools and toolkits. Each of these are capable of various tasks (including some that I won't explicitly address in this post), and they can be seen as "Swiss army-knives" of PDF processing. Whenever I need to get some PDF processing or analysis done and I'm not sure what tool to use, these are the tools are usually my starting point. In the majority of cases at least one of them turns out to have the functionality I'm looking for, so it's a good idea to check them out iof you're not familiar with them already:
 
 - [Xpdf](https://www.xpdfreader.com/) and [Poppler](https://poppler.freedesktop.org/) are both PDF viewers that include a collection of tools for processing and manipulating PDF files. Poppler is a fork of Xpdf, and the tools in both products are largely identical.
-- [Pdfcpu](https://github.com/pdfcpu/pdfcpu) is a PDF processing library (which includes a CLI tool) that is written in the *Go* language. It supports all PDF versions up to PDF 1.7 (ISO-32000).
+- [Pdfcpu](https://github.com/pdfcpu/pdfcpu) is a PDF processing library that is written in the *Go* language. The documentation explicity mentions its main focus is strong support for batch processing and scripting via a rich command line. It supports all PDF versions up to PDF 1.7 (ISO-32000).
 - [QPDF](http://qpdf.sourceforge.net/) is "a command-line program that does structural, content-preserving transformations on PDF files".
 - [MuPDF](https://www.mupdf.com/) is "a lightweight PDF, XPS, and E-book viewer". It includes the [mutool](https://www.mupdf.com/docs/index.html) utility, which can do a number of PDF processing tasks.
 - [Ghostscript](https://www.ghostscript.com/) is "an interpreter for the PostScript language and PDF files". It provides rendering to a variety of raster and vector formats.  
