--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -10,7 +10,7 @@ comment_id: 76
   <figcaption>Production photo from "2001: A Space Odyssey". ©Stanley Kubrick Archives/TASCHEN.</figcaption>
 </figure>
 
-Problems with PDF files are a recurring theme in my daily work. Over the years, I've been using a variety of open-source software tools for solving such problems. These include tools for validation and error-checking, the extraction of (technical) features and metadata, text and image extraction, to name but a few. Many of these are tools that I only use occasionally, so I often find myself forgetting how to use them (if I even remember what tool to use at all!). So, I thought it would be useful to document my go-to PDF tools and commands for a variety of common tasks in one single place, similar to [my 2015 post on preserving optical media from the command-line]({{ BASE_PATH }}/2015/11/13/preserving-optical-media-from-the-command-line). This post is first attempt at this. For now it is largely based on a number of unpublished lists, cheat-sheets and working notes that I've compiled earlier. I expect this will be very much a "living" document, and that I will add more content over time. The selection of tasks and tools presented here is by no means exhaustive, as it is guided to a great degree by the PDF-related issues I encounter in my day to day work. Also, many of these tasks could be done using other tools (including ones that are not mentioned here), so there's probably a fair amount of selection bias here, and don't want to make any claims of presenting the "best" way to do any of these tasks here.
+Problems with PDF files are a recurring theme in my daily work. Over the years, I've been using a variety of open-source software tools for solving such problems. These include tools for validation and error-checking, the extraction of (technical) features and metadata, text and image extraction, to name but a few. Many of these are tools that I only use occasionally, so I often find myself forgetting how to use them (if I even remember what tool to use at all!). So, I thought it would be useful to document my go-to PDF tools and commands for a variety of common tasks in one single place, similar to [my 2015 post on preserving optical media from the command-line]({{ BASE_PATH }}/2015/11/13/preserving-optical-media-from-the-command-line). This post is first attempt at this. For now it is largely based on a number of unpublished lists, cheat-sheets and working notes that I compiled earlier. I expect this will be very much a "living" document, and that I will add more content over time. The selection of tasks and tools presented here is by no means exhaustive, as it is guided to a great degree by the PDF-related issues I encounter in my day to day work. Also, many of these tasks could be done using other tools (including ones that are not mentioned here), so there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here.
 
 All of the tools presented here are published as open-source, and most of them have a command-line interface. 
 
@@ -19,7 +19,7 @@ All of the tools presented here are published as open-source, and most of them h
 
 ## PDF multi-tools
 
-Before diving into any specific tasks, I'll start this post by listing a number of general-purpose PDF tools and toolkits. Each of these are capable of various tasks (including some that I won't explicitly address in this post), and they can be seen as "Swiss army-knives" of PDF processing. Whenever I need to get some PDF processing or analysis done and I'm not sure what tool to use, these are the tools are usually my starting point. In the majority of cases at least one of them turns out to have the functionality I'm looking for, so it's a good idea to check them out iof you're not familiar with them already:
+Before diving into any specific tasks, I'll start this post by listing a number of general-purpose PDF tools and toolkits. Each of these are capable of a wide range of tasks (including some that I won't explicitly address in this post), and they can be seen as "Swiss army-knives" of PDF processing. Whenever I need to get some PDF processing or analysis done and I'm not sure what tool to use, these usually my starting point. In the majority of cases at least one of them turns out to have the functionality I'm looking for, so it's a good idea to check them out if you're not familiar with them already:
 
 - [Xpdf](https://www.xpdfreader.com/) and [Poppler](https://poppler.freedesktop.org/) are both PDF viewers that include a collection of tools for processing and manipulating PDF files. Poppler is a fork of Xpdf, and the tools in both products are largely identical.
 - [Pdfcpu](https://github.com/pdfcpu/pdfcpu) is a PDF processing library that is written in the *Go* language. The documentation explicity mentions its main focus is strong support for batch processing and scripting via a rich command line. It supports all PDF versions up to PDF 1.7 (ISO-32000).
