added header image, fixed malformed uri ref in old post

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -6,14 +6,15 @@ comment_id: 76
 ---
 
 <figure class="image">
-  <img src="{{ BASE_PATH }}/images/2021/02/stewardess-phone.jpg" alt="Satellite image of Wadden Sea">
-  <figcaption>Production photo from "2001: A Space Odyssey". ©Stanley Kubrick Archives/TASCHEN.</figcaption>
+  <img src="{{ BASE_PATH }}/images/2021/09/plumber-tools.jpg" alt="Plumbers Tool Box">
+  <figcaption><a href="https://www.flickr.com/photos/130648318@N06/42662053232">Plumbers Tool Box</a> by <a href="https://www.flickr.com/photos/130648318@N06/">pszz</a> on Flickr. Used under <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC BY-NC-SA 2.0</a>.</figcaption>
 </figure>
 
-Problems with PDF files are a recurring theme in my daily work. Over the years, I've been using a variety of open-source software tools for solving such problems. These include tools for validation and error-checking, the extraction of (technical) features and metadata, text and image extraction, to name but a few. Many of these are tools that I only use occasionally, so I often find myself forgetting how to use them (if I even remember what tool to use at all!). So, I thought it would be useful to document my go-to PDF tools and commands for a variety of common tasks in one single place, similar to [my 2015 post on preserving optical media from the command-line]({{ BASE_PATH }}/2015/11/13/preserving-optical-media-from-the-command-line). This post is first attempt at this. For now it is largely based on a number of unpublished lists, cheat-sheets and working notes that I compiled earlier. I expect this will be very much a "living" document, and that I will add more content over time. The selection of tasks and tools presented here is by no means exhaustive, as it is guided to a great degree by the PDF-related issues I encounter in my day to day work. Also, many of these tasks could be done using other tools (including ones that are not mentioned here), so there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here.
+Problems with PDF files are a recurring theme in my daily work. Over the years, I've been using a variety of open-source software tools for solving such problems. These include tools for validation and error-checking, the extraction of (technical) features and metadata, text and image extraction, to name but a few. Many of these are tools that I only use occasionally, so I often find myself forgetting how to use them (if I even remember what tool to use at all!). So, I thought it would be useful to document my go-to PDF tools and commands for a variety of common tasks in one single place, similar to [my 2015 post on preserving optical media from the command-line]({{ BASE_PATH }}/2015/11/13/preserving-optical-media-from-the-command-line).
 
-All of the tools presented here are published as open-source, and most of them have a command-line interface. 
+This post is first attempt at this. For now it is largely based on a number of unpublished lists, cheat-sheets and working notes that I compiled earlier. I expect this will be very much a "living" document, and that I will add more content over time. The selection of tasks and tools presented here is by no means exhaustive, as it is guided to a great degree by the PDF-related issues I encounter in my day to day work. Also, many of these tasks could be done using other tools (including ones that are not mentioned here), so there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here.
 
+All of the tools presented here are published as open-source, and most of them have a command-line interface.
 
 <!-- more -->
 
@@ -31,8 +32,7 @@ The remaining sections of this post are dedicated to specific tasks. As you will
 
 ## Validation and integrity testing
 
-PDFs that are damaged, structurally flawed or otherwise not conformant to the PDF format specification can result in a multitude of problems. A number of tools provide error checking and integrity testing functionality. This can range from limited structure checks, to full (claimed) validation against the filespec.
-
+PDFs that are damaged, structurally flawed or otherwise not conformant to the PDF format specification can result in a multitude of problems. A number of tools provide error checking and integrity testing functionality. This can range from limited structure checks, to full (claimed) validation against the filespec. It's important to note that none of the tools mentioned here are perfect, and some faults that are picked up by one tool may be completely ignored by another one and vice versa. So it's often a good idea to try multiple tools.
 
 ### QPDF 
 
@@ -112,8 +112,6 @@ verapdf whatever.pdf
 (Or use GUI).
 
 
-
-
 ## Metadata extraction
 
 
@@ -155,6 +153,7 @@ Ghostscript, Poppler:
 
 <https://gist.github.com/bitsgalore/9eac23e44d6d99b3caa6#useful-verapdf-command-lines>
 
+
 Disable PDF/A validation, only extract features:
 
 ```
@@ -166,6 +165,8 @@ Recursively process directory tree:
 ```
 verapdf --recurse --off --extract myDir > whatever.xml
 ```
+
+<https://docs.verapdf.org/cli/feature-extraction/>
 
 ## Extract internal PDF objects
 
@@ -190,6 +191,17 @@ verapdf --recurse --off --extract myDir > whatever.xml
 
 pdftocairo (Poppler)?
 
+
+## Validation against profile (PDF/A)
+
+
+## Policy-based assessment
+
+VeraPDF, see [Policy-based assessment with VeraPDF - a first impression]({{ BASE_PATH }}/2017/06/01/policy-based-assessment-with-verapdf-a-first-impression)
+
+## Repair corrupted PDF
+
+<https://superuser.com/questions/278562/how-can-i-fix-repair-a-corrupted-pdf-file>
 
 ## Further resources
 
