--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -20,31 +20,48 @@ All of the tools presented here are published as open-source, and most of them h
 
 ## PDF multi-tools
 
-Before diving into any specific tasks, I'll start this post by listing a number of general-purpose PDF tools and toolkits. Each of these are capable of a wide range of tasks (including some that I won't explicitly address in this post), and they can be seen as "Swiss army-knives" of PDF processing. Whenever I need to get some PDF processing or analysis done and I'm not sure what tool to use, these usually my starting point. In the majority of cases at least one of them turns out to have the functionality I'm looking for, so it's a good idea to check them out if you're not familiar with them already:
+Before diving into any specific tasks, I'll start this post by listing a number of general-purpose PDF tools and toolkits. Each of these are capable of a wide range of tasks (including some that I won't explicitly address in this post), and they can be seen as "Swiss army-knives" of PDF processing. Whenever I need to get some PDF processing or analysis done and I'm not sure what tool to use, these are usually my starting point. In the majority of cases, at least one of them turns out to have the functionality I'm looking for, so it's a good idea to check them out if you're not familiar with them already.
 
-- [Xpdf](https://www.xpdfreader.com/) and [Poppler](https://poppler.freedesktop.org/) are both PDF viewers that include a collection of tools for processing and manipulating PDF files. Poppler is a fork of Xpdf, and the tools in both products are largely identical.
-- [Pdfcpu](https://github.com/pdfcpu/pdfcpu) is a PDF processing library that is written in the *Go* language. The documentation explicity mentions its main focus is strong support for batch processing and scripting via a rich command line. It supports all PDF versions up to PDF 1.7 (ISO-32000).
-- [QPDF](http://qpdf.sourceforge.net/) is "a command-line program that does structural, content-preserving transformations on PDF files".
-- [MuPDF](https://www.mupdf.com/) is "a lightweight PDF, XPS, and E-book viewer". It includes the [mutool](https://www.mupdf.com/docs/index.html) utility, which can do a number of PDF processing tasks.
-- [Ghostscript](https://www.ghostscript.com/) is "an interpreter for the PostScript language and PDF files". It provides rendering to a variety of raster and vector formats.  
+### Xpdf/Poppler
+
+[Xpdf](https://www.xpdfreader.com/) and [Poppler](https://poppler.freedesktop.org/) are both PDF viewers that include a collection of tools for processing and manipulating PDF files. Poppler is a fork of this software, which adds a number of unique tools that are not part of the original Xpdf package. The tools included with Poppler are:
+
+- **pdfdetach**: lists or extracts embedded files (attachments)
+- **pdffonts**: analyzes fonts
+- **pdfimages**: extracts images
+- **pdfinfo**: displays document information
+- **pdfseparate**: page extraction tool
+- **pdfsig**: verifies digital signatures
+- **pdftocairo**: converts PDF to PNG/JPEG/PDF/PS/EPS/SVG using the [Cairo](https://www.cairographics.org/) graphics library
+- **pdftohtml**: converts PDF to HTML
+- **pdftoppm**: converts PDF to PPM/PNG/JPEG images
+- **pdftops**: converts PDF to PostScript (PS)
+- **pdftotext**: text extraction tool
+- **pdfunite**: document merging tool
+
+The tools in Xpdf are largely identical, but don't include *pdfseparate*, *pdfsig*, *pdftocairo*, and *pdfunite*. Also, Xpdf has a separate *pdftopng* tool for converting PDF to PNG images (this functionality is covered by *pdftoppn* in the Poppler version). On Debian-based systems the Poppler tools are part of the package *poppler-utils*.
+
+### Pdfpcu
+
+[Pdfcpu](https://pdfcpu.io/) is a PDF processor that is written in the *Go* language. The documentation explicity mentions its main focus is strong support for batch processing and scripting via a rich command line. It supports all PDF versions up to PDF 1.7 (ISO-32000).
+
+### QPDF
+
+[QPDF](http://qpdf.sourceforge.net/) is "a command-line program that does structural, content-preserving transformations on PDF files".
+
+### MuPDF
+
+[MuPDF](https://www.mupdf.com/) is "a lightweight PDF, XPS, and E-book viewer". It includes the [mutool](https://www.mupdf.com/docs/index.html) utility, which can do a number of PDF processing tasks.
+
+### Ghostscript
+
+[Ghostscript](https://www.ghostscript.com/) is "an interpreter for the PostScript language and PDF files". It provides rendering to a variety of raster and vector formats.  
 
 The remaining sections of this post are dedicated to specific tasks. As you will see, many these can be addressed using the multi-tools listed in this section.  
 
 ## Validation and integrity testing
 
 PDFs that are damaged, structurally flawed or otherwise not conformant to the PDF format specification can result in a multitude of problems. A number of tools provide error checking and integrity testing functionality. This can range from limited structure checks, to full (claimed) validation against the filespec. It's important to note that none of the tools mentioned here are perfect, and some faults that are picked up by one tool may be completely ignored by another one and vice versa. So it's often a good idea to try multiple tools.
-
-### QPDF 
-
-Invoking QPDF (see above) with its `--check` option performs checks on the overall file structure, the presence of encryption, linearization, and encoding of stream data. I often find it useful to use it in conjuction with the `--verbose` option, which results in a command-line like this:
-
-```bash
-qpdf --check --verbose whatever.pdf
-```
-
-It is not a full-fledged PDF validator, and the [documentation](http://qpdf.sourceforge.net/files/qpdf-manual.html) states that:
-
-> A file for which --check reports no errors may still have errors in stream data content but should otherwise be structurally sound 
 
 ### Pdfcpu
 
@@ -60,27 +77,26 @@ The "strict" mode can be activated with the `-m` option:
 pdfcpu validate -m strict whatever.pdf
 ```
 
-
 ### JHOVE
 
-
-[JHOVE](http://jhove.openpreservation.org/)
+[JHOVE](http://jhove.openpreservation.org/) is a is a file format identification, validation and characterisation tool that includes a module for PDF validation. It is widely used in the digital heritage (libraries, archives) sector. Here's a typical command-line example (note that you explicitly need to invoke the *PDF-hul* module via the `-m` option; omitting this can give unexpected results):
 
 ```bash
 jhove -m PDF-hul -i whatever.pdf
 ```
 
+Check out the [documentation](https://jhove.openpreservation.org/modules/pdf/) for more information about JHOVE's PDF module, and its limitations.
 
-### [Poppler](https://poppler.freedesktop.org/)
+### QPDF 
+
+Invoking QPDF (see above) with its `--check` option performs checks on the overall file structure. QPDF does not provide full-fledged validation, and the [documentation](http://qpdf.sourceforge.net/files/qpdf-manual.html) states that:
+
+> A file for which --check reports no errors may still have errors in stream data content but should otherwise be structurally sound
+
+Nevertheless, the tool is still very useful for detecting various issues, especially in conjunction with the `--verbose` option. Here's an example command-line:
 
 ```bash
-pdfinfo whatever.pdf
-```
-
-Or (forces reading of all text):
-
-```bash
-pdftotext whatever.pdf
+qpdf --check --verbose whatever.pdf
 ```
 
 ### [Ghostscript](https://www.ghostscript.com/)
@@ -110,6 +126,31 @@ verapdf whatever.pdf
 ```
 
 (Or use GUI).
+
+<!--
+
+Perhaps leave out bc:
+
+1. Reliance on exit code (not obvious to newbies)
+2. Quick test showed truncated PDFs still gave exit code 0!
+
+### Pdfinfo
+
+The *pdfinfo* tool that is part of Xpdf and Poppler 
+
+The [Poppler](https://poppler.freedesktop.org/)
+
+```bash
+pdfinfo whatever.pdf
+```
+
+Or (forces reading of all text):
+
+```bash
+pdftotext whatever.pdf
+```
+
+-->
 
 
 ## Metadata extraction
@@ -202,6 +243,37 @@ VeraPDF, see [Policy-based assessment with VeraPDF - a first impression]({{ BASE
 ## Repair corrupted PDF
 
 <https://superuser.com/questions/278562/how-can-i-fix-repair-a-corrupted-pdf-file>
+
+
+## Info about images (incl resolution)
+
+```bash
+pdfimages -list whatever.pdf
+```
+
+Result:
+
+```
+page   num  type   width height color comp bpc  enc interp  object ID x-ppi y-ppi size ratio
+
+--------------------------------------------------------------------------------------------
+
+   1     0 image    1000   544  cmyk    4   8  image  no         4  0   212   212 1184K  56%
+
+   1     1 image    1000   704  cmyk    4   8  image  no         6  0   201   201 1280K  47%
+
+   1     2 image     960  1280  cmyk    4   8  image  no         8  0   217   217 2251K  47%
+
+   1     3 image    4320  3240  cmyk    4   8  image  no        10  0   567   567 22.6M  42%
+
+   2     4 image    1024   683  cmyk    4   8  image  no        14  0   211   211 1275K  47%
+
+   2     5 image    2048  1536  cmyk    4   8  image  no        16  0   266   266 7671K  62%
+
+   2     6 image     960  1280  cmyk    4   8  image  no        18  0   245   245 2655K  55%
+
+   2     7 image     681   511  cmyk    4   8  image  no        20  0   218   218  912K  67%
+```
 
 ## Further resources
 
