completed validation section

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -59,7 +59,7 @@ The tools in Xpdf are largely identical, but don't include *pdfseparate*, *pdfsi
 
 The remaining sections of this post are dedicated to specific tasks. As you will see, many these can be addressed using the multi-tools listed in this section.  
 
-## Validation and integrity testing
+## Validate / test integrity of PDF document
 
 PDFs that are damaged, structurally flawed or otherwise not conformant to the PDF format specification can result in a multitude of problems. A number of tools provide error checking and integrity testing functionality. This can range from limited structure checks, to full (claimed) validation against the filespec. It's important to note that none of the tools mentioned here are perfect, and some faults that are picked up by one tool may be completely ignored by another one and vice versa. So it's often a good idea to try multiple tools.
 
@@ -93,65 +93,61 @@ Invoking QPDF (see above) with its `--check` option performs checks on the overa
 
 > A file for which --check reports no errors may still have errors in stream data content but should otherwise be structurally sound
 
-Nevertheless, the tool is still very useful for detecting various issues, especially in conjunction with the `--verbose` option. Here's an example command-line:
+Nevertheless, this tool is still useful for detecting various issues, especially in conjunction with the `--verbose` option. Here's an example command-line:
 
 ```bash
 qpdf --check --verbose whatever.pdf
 ```
 
-### [Ghostscript](https://www.ghostscript.com/)
+### Ghostscript
+
+Another useful technique is to process a PDF with Ghostscript (rendering the result to a "nullpage" device). For example: 
 
 ```bash
 gs -dNOPAUSE -dBATCH -sDEVICE=nullpage whatever.pdf
 ```
 
-### [Apache PDFBox](https://pdfbox.apache.org/)
+Ghostscript will report quite detailed information in case of any problems with the input file. As an example, here's the output for a PDF with a truncated document trailer:
 
-Using PDFDebugger (activates GUI-type browser):
+```
+   **** Error:  An error occurred while reading an XREF table.
+   **** The file has been damaged.  This may have been caused
+   **** by a problem while converting or transfering the file.
+   **** Ghostscript will attempt to recover the data.
+   **** However, the output may be incorrect.
+   **** Warning:  There are objects with matching object and generation
+   **** numbers.  The output may be incorrect.
+   **** Error:  Trailer dictionary not found.
+                Output may be incorrect.
+   No pages will be processed (FirstPage > LastPage).
 
-```bash
-java -jar ~/pdfbox/pdfbox-app-2.0.21.jar PDFDebugger whatever.pdf
+   **** This file had errors that were repaired or ignored.
+   **** Please notify the author of the software that produced this
+   **** file that it does not conform to Adobe's published PDF
+   **** specification.
 ```
 
-### [MuPDF](https://mupdf.com/)
+### Mutool
+
+Running Mutool (part of MuPDF, see above) with the `info` command returns information about internal pdf resources. In case of broken or malformed files the output includes error messages, which can be quite informative. Here's an example command-line:
 
 ```bash
 mutool info whatever.pdf 
 ```
 
-### [VeraPDF](https://verapdf.org/)
+### Other options
+
+- VeraPDF](https://verapdf.org/) can provide useful information on damaged or invalid PDF documents. However, VeraPDF is primarily aimed at validation against [PDF/A](https://en.wikipedia.org/wiki/PDF/A) and [PDF/UA](https://en.wikipedia.org/wiki/PDF/UA) profiles, which are both subsets of [ISO 32000](https://en.wikipedia.org/wiki/PDF) (which defines the PDF format's full feature set). As a result, VeraPDF's validation output can be somewhat difficult to interpret for "regular" PDFS (i.e. documents that are not PDF/A or PDF/UA). Nevertheless, experienced users may find VeraPDF useful for such files as well.
+
+- Several online resources recommend the *pdfinfo* tool that is part of Xpdf and Poppler for integrity checking. However, while writing this post I ran a quick test of the tool on a PDF with a truncated document trailer[^1] (which is a very serious flaw), which was not flagged by *pdfinfo* at all.  
+
+## Validation against PDF/A profile
+
+[VeraPDF](https://verapdf.org/)
 
 ```bash
 verapdf whatever.pdf
 ```
-
-(Or use GUI).
-
-<!--
-
-Perhaps leave out bc:
-
-1. Reliance on exit code (not obvious to newbies)
-2. Quick test showed truncated PDFs still gave exit code 0!
-
-### Pdfinfo
-
-The *pdfinfo* tool that is part of Xpdf and Poppler 
-
-The [Poppler](https://poppler.freedesktop.org/)
-
-```bash
-pdfinfo whatever.pdf
-```
-
-Or (forces reading of all text):
-
-```bash
-pdftotext whatever.pdf
-```
-
--->
-
 
 ## Metadata extraction
 
@@ -233,9 +229,6 @@ verapdf --recurse --off --extract myDir > whatever.xml
 pdftocairo (Poppler)?
 
 
-## Validation against profile (PDF/A)
-
-
 ## Policy-based assessment
 
 VeraPDF, see [Policy-based assessment with VeraPDF - a first impression]({{ BASE_PATH }}/2017/06/01/policy-based-assessment-with-verapdf-a-first-impression)
@@ -281,3 +274,5 @@ page   num  type   width height color comp bpc  enc interp  object ID x-ppi y-pp
 
 - [PDF tools in Community Owned Digital Preservation Tool Registry (COPTR)](https://coptr.digipres.org/index.php/PDF)
 
+
+[^1]: Command line: `pdfinfo whatever.pdf`
