--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -89,11 +89,11 @@ Check out the [documentation](https://jhove.openpreservation.org/modules/pdf/) f
 
 ### QPDF 
 
-Invoking QPDF (see above) with its `--check` option performs checks on the overall file structure. QPDF does not provide full-fledged validation, and the [documentation](http://qpdf.sourceforge.net/files/qpdf-manual.html) states that:
+The `--check` option of QPDF (see above) performs checks on a PDF's overall file structure. QPDF does not provide full-fledged validation, and the [documentation](http://qpdf.sourceforge.net/files/qpdf-manual.html) states that:
 
 > A file for which --check reports no errors may still have errors in stream data content but should otherwise be structurally sound
 
-Nevertheless, this tool is still useful for detecting various issues, especially in conjunction with the `--verbose` option. Here's an example command-line:
+Nevertheless, QPDF is still useful for detecting various issues, especially in conjunction with the `--verbose` option. Here's an example command-line:
 
 ```bash
 qpdf --check --verbose whatever.pdf
@@ -107,7 +107,7 @@ Another useful technique is to process a PDF with Ghostscript (rendering the res
 gs -dNOPAUSE -dBATCH -sDEVICE=nullpage whatever.pdf
 ```
 
-Ghostscript will report quite detailed information in case of any problems with the input file. As an example, here's the output for a PDF with a truncated document trailer:
+In case of any problems with the input file, Ghostscript will report quite detailed information. As an example, here's the output for a PDF with a truncated document trailer:
 
 ```
    **** Error:  An error occurred while reading an XREF table.
