--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -12,11 +12,13 @@ comment_id: 76
 
 Problems with PDF files are a recurring theme in my daily work. Over the years, I've been using a variety of open-source software tools for solving such problems. These include tools for validation and error-checking, the extraction of (technical) features and metadata, text and image extraction, to name but a few. Many of these are tools that I only use occasionally, so I often find myself forgetting how to use them (if I even remember what tool to use at all!). So, I thought it would be useful to document my go-to PDF tools and commands for a variety of common tasks in one single place, similar to [my 2015 post on preserving optical media from the command-line]({{ BASE_PATH }}/2015/11/13/preserving-optical-media-from-the-command-line).
 
-This post is first attempt at this. For now it is largely based on a number of unpublished lists, cheat-sheets and working notes that I compiled earlier. I expect this will be very much a "living" document, and that I will add more content over time. The selection of tasks and tools presented here is by no means exhaustive, as it is guided to a great degree by the PDF-related issues I encounter in my day to day work. Also, many of these tasks could be done using other tools (including ones that are not mentioned here), so there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here.
-
-All of the tools presented here are published as open-source, and most of them have a command-line interface.
+This post is first attempt at this. For now it is largely based on a number of unpublished lists, cheat-sheets and working notes that I compiled earlier. I expect this will be very much a "living" document, and that I will add more content over time. All of the tools presented here are published as open-source, and most of them have a command-line interface.
 
 <!-- more -->
+
+## Caveats
+
+I would like to stress that the selection of tasks and tools presented here is by no means meant to be exhaustive, as it is guided to a great degree by the PDF-related issues I've encountered myself in my day to day work. Some of these tasks could be done using other tools (including ones that are not mentioned here), and in some cases these other tools may well be better choices! So there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here.
 
 ## PDF multi-tools
 
@@ -57,7 +59,7 @@ The tools in Xpdf are largely identical, but don't include *pdfseparate*, *pdfsi
 
 [Ghostscript](https://www.ghostscript.com/) is "an interpreter for the PostScript language and PDF files". It provides rendering to a variety of raster and vector formats.  
 
-The remaining sections of this post are dedicated to specific tasks. As you will see, many these can be addressed using the multi-tools listed in this section.  
+The remaining sections of this post are dedicated to specific tasks. As you will see, many of these can be addressed using the multi-tools listed in this section.  
 
 ## Validate / test integrity of PDF document
 
